<resources>
    <string name="app_name">ClassRep</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_content_desc">add an institute</string>
    <string name="calendar">calendario</string>
    <string name="fund">fondo cassa</string>
    <string name="pta">colloqui</string>
    <string name="eventi">eventi</string>
    <string name="riunioni">riunioni</string>
    <string name="trash">trashcan</string>
    <string name="deselectAll">deselect all</string>
    <string name="selectAll">select all</string>
    <string name="titolo">Titolo</string>
    <string name="data">Data</string>
    <string name="posto">Posto</string>
    <string name="note">Note</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="cancelAll">Cancella tutto</string>
    <string name="confirmAdd">Conferma aggiunta</string>
    <string name="orario">Orario</string>
    <string name="nomeprof">Nome Professore</string>
    <string name="oraInizio">Ora Inizio</string>
    <string name="oraFine">Ora fine</string>
    <string name="materie">Materie</string>
    <string name="cognomeprof">Cognome Prof.</string>
    <string name="casuale">Causale</string>
    <string name="open">Drawer open</string>
    <string name="close">Drawer Closed</string>
</resources>