<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/deselectAll"
        android:title=""
        android:icon="@drawable/ic_baseline_check_box_outline_blank_24"
        android:contentDescription="@string/deselectAll"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/selectAll"
        android:title=""
        android:icon="@drawable/ic_baseline_check_box_24"
        android:contentDescription="@string/selectAll"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/trash"
        android:title=""
        android:icon="@drawable/ic_closed_trashcan"
        android:contentDescription="@string/trash"
        app:showAsAction="ifRoom"/>
</menu>