<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="1dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/nome"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20sp"
            android:layout_marginStart="8dp"
            android:hint="@string/nome"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:backgroundTint="@color/purple_700"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/cognome"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20sp"
            android:layout_marginStart="8dp"
            android:hint="@string/cognome"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/nome"
            app:layout_constraintTop_toTopOf="parent"
            app:backgroundTint="@color/purple_700" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/time"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:hint="@string/orario"
            android:inputType="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cognome"
            app:layout_constraintTop_toTopOf="parent"
            app:backgroundTint="@color/purple_700"
            android:focusable="false"
            android:clickable="false"
            android:cursorVisible="false"/>

        <Button
            android:id="@+id/trashPerson"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:padding="0dp"
            app:icon="@drawable/ic_closed_trashcan"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="20sp"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.351"
            app:layout_constraintStart_toEndOf="@+id/time"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>