<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen"
    tools:context=".adder.AddPtaActivity">

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blurViewPta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/selection_appbar">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/ptaTopAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/modify_appbar"
            app:title="Modifica il colloquio" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/AppBarLayout">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameProf"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="16dp"
                android:hint="@string/nomeprof"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.095"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColorHint="@color/purple_700"
                app:boxStrokeColor="@color/purple_500"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nomeProf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="116dp"
                    android:enabled="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surnameProf"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="30sp"
                android:hint="@string/cognomeprof"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.095"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameProf"
                android:textColorHint="@color/purple_700"
                app:boxStrokeColor="@color/purple_500"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cognomeProf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="116dp"
                    android:enabled="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/day"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="30sp"
                android:hint="@string/data"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.095"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/surnameProf"
                android:textColorHint="@color/purple_700"
                app:boxStrokeColor="@color/purple_500"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/giornoPta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="116dp"
                    android:textAlignment="center"
                    android:enabled="false"
                    android:focusable="false"
                    android:clickable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/day">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/startTime"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginTop="30sp"
                    android:hint="@string/oraInizio"
                    android:textColorHint="@color/purple_700"
                    app:boxStrokeColor="@color/purple_500"
                    app:boxStrokeWidth="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/oraInizio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:layout_editor_absoluteX="84dp"
                        tools:layout_editor_absoluteY="116dp"
                        android:textAlignment="center"
                        android:enabled="false"
                        android:focusable="false"
                        android:clickable="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/finishTime"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginTop="30sp"
                    android:hint="@string/oraFine"
                    android:textColorHint="@color/purple_700"
                    app:boxStrokeColor="@color/purple_500"
                    app:boxStrokeWidth="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/oraFine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:layout_editor_absoluteX="84dp"
                        tools:layout_editor_absoluteY="116dp"
                        android:textAlignment="center"
                        android:enabled="false"
                        android:focusable="false"
                        android:clickable="false" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/subject"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="30sp"
                android:hint="@string/materie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.095"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                android:textColorHint="@color/purple_700"
                app:boxStrokeColor="@color/purple_500"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/subjectPta"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="116dp"
                    android:enabled="false" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subject">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/parents"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/white"
                        android:text="Genitori"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.01999998" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/expandableLayoutPtaParent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/parents">


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/putParent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="1dp"
                            android:layout_marginTop="1dp"
                            android:layout_marginEnd="1dp"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0"
                            tools:listitem="@layout/adapter_people"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:clickable="false" />

                        <Button
                            android:id="@+id/ptaParent"
                            style="@style/Widget.Material3.Button.Icon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:padding="0dp"
                            app:icon="@drawable/ic_baseline_add_24"
                            app:iconGravity="textStart"
                            app:iconPadding="0dp"
                            app:iconTint="@color/purple_700"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/putParent"
                            android:visibility="gone"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    </eightbitlab.com.blurview.BlurView>
</androidx.constraintlayout.widget.ConstraintLayout>