<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen"
    tools:context=".adder.AddMeetingActivity">
    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blurViewMeeting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/AppBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:theme="@style/selection_appbar">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/meetingTopBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:menu="@menu/modify_appbar"
                    app:title="Modifica la riunione" />

            </com.google.android.material.appbar.AppBarLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/place"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_marginTop="20sp"
                        android:layout_marginHorizontal="20sp"
                        android:hint="@string/posto"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/day"
                        android:textColorHint="@color/purple_200"
                        app:boxStrokeColor="@color/purple_500"
                        app:boxStrokeWidth="2dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/postoModificaMeeting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:layout_editor_absoluteX="84dp"
                            tools:layout_editor_absoluteY="116dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="?attr/textInputFilledStyle"
                        android:id="@+id/title"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="20sp"
                        android:hint="@string/titolo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textColorHint="@color/purple_200"
                        app:boxStrokeColor="@color/purple_500"
                        app:boxStrokeWidth="2dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/titoloModificaMeeting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:layout_editor_absoluteX="84dp"
                            tools:layout_editor_absoluteY="116dp"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/day"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="20sp"
                        android:layout_marginTop="20sp"
                        android:hint="@string/data"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title"
                        android:textColorHint="@color/purple_200"
                        app:boxStrokeColor="@color/purple_500"
                        app:boxStrokeWidth="2dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/giornoModificaMeeting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:textAlignment="center"
                            tools:layout_editor_absoluteX="84dp"
                            tools:layout_editor_absoluteY="116dp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chips"
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@+id/place"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:singleSelection="true">
                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipMeeting"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Scolastico"
                            android:checked="true"/>
                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipMeeting1"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Extra-scolastico"/>

                    </com.google.android.material.chip.ChipGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/note"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginHorizontal="20sp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/note"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/chips"
                        android:textColorHint="@color/purple_200"
                        app:boxStrokeColor="@color/purple_500"
                        app:boxStrokeWidth="2dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/notaModificaMeeting"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:layout_editor_absoluteX="84dp"
                            tools:layout_editor_absoluteY="116dp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/reportMeeting"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginHorizontal="20sp"
                        android:layout_marginTop="20dp"
                        android:hint="Verbale"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/note"
                        android:textColorHint="@color/purple_200"
                        app:boxStrokeColor="@color/purple_500"
                        app:boxStrokeWidth="2dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/reportMeetingModify"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:layout_editor_absoluteX="84dp"
                            tools:layout_editor_absoluteY="116dp" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </eightbitlab.com.blurview.BlurView>

</androidx.constraintlayout.widget.ConstraintLayout>